Fixed the background not scaling on mobile.

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,17 +1,13 @@
-
-
-/* background setup */
 body {
-    background: url('../images/splash-desktop.jpg') no-repeat fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-image: url('../images/splash-desktop.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
 }
 
-@media ( max-width: 320px ) {
+@media ( orientation: portrait ) {
 	body {
-		background: url('../images/splash-mobile.jpg') no-repeat fixed;
+		background-image: url('../images/splash-mobile.jpg');
     }
 }
 
